fix: overflow of games

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -68,6 +68,7 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+    height: 100%;
   }
 
   input[type="number"]::-webkit-inner-spin-button,
